# bounty_platform

./: .env.example  .gitignore  AUTOMATION_PLAN.md  CHANGELOG.md  CLEANUP_ANALYSIS.md  DEVELOPMENT.md  Dockerfile  LICENSE  PRODUCTION_READINESS.md  README.md  REAL_GOAL_ANALYSIS.md  bp.py  bugbounty_agents_overview.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.Jules/: palette.md
.jules/: bolt.md
.trae/documents/: Araba Tamir Planı (Platform Repair Plan).md  Proje Analizi ve Dil Standardizasyonu Planı.md
airflow/dags/: bounty_pipeline.py
alembic/: env.py
backend/: database.py  logger.py  main.py  main_v2.py  models.py
backend/utils/: scanners.py
bpcli/: __init__.py
bugbounty_7_agents_template/: README.md  requirements.txt
bugbounty_7_agents_template/agents/: auth_checks.py  content.py  coordinator.py  envanter.py  prompt_ai.py  reporter.py  scan_web.py  tech_fp.py  utils.py
bugbounty_7_agents_template/configs/: program.yaml
bugbounty_7_agents_template/data/: prompt_payloads.txt
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Dashboard.tsx  JobRow.tsx  Login.tsx  (+1 more)
scripts/: bp.py  deploy_contract.py  fix_turkish.sh
smart_contract/: BugBounty.sol  package-lock.json  package.json
smart_contract/cache/: solidity-files-cache.json
smart_contract/contracts/: BugBounty.sol
smart_contract/scripts/: deploy.js
smart_contract/test/: BugBounty.test.js  BugBounty.workflow.test.js
tests/: conftest.py  test_auth_guard.py  test_jobs.py
(+3 files in other folders)
